[package]
name = "tx-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
log = "0.4.17"
thiserror = "1.0.31"
rust_decimal = { version = "1.24.0", features = ["serde-with-float"] }
csv = "1.1.6"
